tests/paczka1/fuzzy1/60805484.err
Error in line 1: H83quzC A98 97,1
Error in line 5: eRnUc1BCR4D A497 35,3
Error in line 13: r0Z2 A687 25,3
Error in line 18: eRnUc1BCR4D A98 29,4
Error in line 21: A98 A497 29,7
Error in line 16: r0Z2 A271 90,0
Error in line 22: A98 A71 67,1
Error in line 26: zjG16iVuPsd A687 96,8
